crates/mb-tui/src/devkit/snapshots/mb_tui__devkit__scenario__uncertainty-and-density_styled_28x8.snap
---
source: crates/mb-tui/src/devkit/scenario.rs
expression: text
---
<fg:white,bold>Trace · 60ns</>
<fg:#a0a0a0>Operation</>
<fg:#a0a0a0>▾ trace  +0ns · 60ns</>
<fg:#a0a0a0>  ▾ partial capture  +0ns ·</>
<fg:#a0a0a0>    ▾ evidence  +0ns · 60ns</>
<fg:white,bold>        observed  +0ns</>
<fg:red>        failed  +0ns</>
<fg:yellow>        missing start  +20ns</>
